--- a/README
+++ b/README
@@ -1,1 +1,3 @@
+<h1>Mirage</h1>
+<hr>
 Mirage is the lite weight social network where you can make friends and can chat with them. It uses AJAX Polling for notifications.
