--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-#Mirage
-* * *
+Mirage 
+
 Mirage is the lite weight social network where you can make friends and can chat with them. It uses AJAX Polling for notifications.
