--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Mirage 
 =========
-Mirage is the lite weight social network where you can make friends and can chat with them. It uses AJAX Polling for notifications.
+Mirage is the  social network where you can make friends and can chat with them. 
+Now just install it in your college and start chating.
+It uses AJAX Polling for notifications.
